--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     </button>
 
     <div class="menu" id="menu">
+        <a href="https://monarcaeventsco.github.io/MonarcaEventsCO/">Inicio</a>
         <a href="#">Desayunos</a>
         <a href="#">Horarios de Atención</a>
         <a href="#">Información de Contacto</a>
