--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     <div class="menu" id="menu">
         <a href="https://monarcaeventsco.github.io/MonarcaEventsCO/">Inicio</a>
         <a href="#">Desayunos</a>
-        <a href="#">Horarios de Atención</a>
+        <a href="https://monarcaeventsco.github.io/Horarios-MonarcaEvenstCO/#">Horarios de Atención</a>
         <a href="#">Información de Contacto</a>
     </div>
 
