--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <a href="https://monarcaeventsco.github.io/MonarcaEventsCO/">Inicio</a>
         <a href="#">Desayunos</a>
         <a href="https://monarcaeventsco.github.io/Horarios-MonarcaEvenstCO/#">Horarios de Atención</a>
-        <a href="#">Información de Contacto</a>
+        <a href="https://monarcaeventsco.github.io/MonarcaEventsCO-Informacion-de-contacto/#">Información de Contacto</a>
     </div>
 
     <section class="hero">
